# monkey

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
src/: behaviour.rs  block.rs  dictionary.rs  display.rs  errors.rs  handler.rs  lib.rs  main.rs  service.rs  store.rs
src/behaviour/: mod.rs  types.rs
src/service/: handler.rs  mod.rs
tests/: service_tests.rs
