[package]
name = "monkey"
version = "0.1.0"
authors = ["Rohit Narurkar <rohit.narurkar@protonmail.com>"]
edition = "2018"

[lib]
name = "monkeylib"
path = "src/lib.rs"

[[bin]]
name = "monkey"
path = "src/bin/main.rs"

[dependencies]
async-std = "1.5.0"
bincode = "1.2.1"
chrono = { version = "0.4", features = ["serde"] }
clap = "2.33.1"
crossterm = "0.17.5"
env_logger = "0.7.1"
futures = "0.3.5"
lazy_static = "1.4.0"
libp2p = "0.18.1"
log = "0.4.8"
rusty-leveldb = "0.3.4"
serde = { version = "1.0.110", features = ["derive"] }
tokio = { version = "0.2.21", features = ["rt-threaded", "blocking", "sync"] }
void = "1.0"
